# snowsim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  genvid.sh  readvol.py
scene/: hetvol.xml  servers.txt  snowball.vol
shaders/: snow.frag  snow.vert
src/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  camera.hpp  cmake_install.cmake  collisionObject.hpp  forceField.hpp  gravityField.cpp  gravityField.hpp  grid.cpp  grid.hpp  groundCO.hpp  main.cpp  materialPoints.cpp  materialPoints.hpp  particleGrid.cpp  particleGrid.hpp  renderer.cpp  renderer.hpp  semiImplicitMethod.cpp  semiImplicitMethod.hpp  simulator.cpp  simulator.hpp  snowModel.hpp  snowsim
src/collisionObject/: collisionObject.hpp  plane.hpp  sphere.hpp
src/lib/embed-resource/: Makefile  cmake_install.cmake  embed-resource
src/lib/nanogui/: Makefile  cmake_install.cmake
src/lib/nanogui/ext_build/glfw/: Makefile  cmake_install.cmake
src/lib/nanogui/ext_build/glfw/src/: Makefile  cmake_install.cmake
src/src/: Makefile  cmake_install.cmake
